<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:background="@color/black"
    tools:context=".SecondFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextureView
            android:id="@+id/cameraTextureView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/fit_view_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/point_down_button"/>

        <Button
            android:id="@+id/arm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/arm_flightplan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:onClick="startWaypointMission"
            android:text="@string/start"
            app:layout_constraintBottom_toTopOf="@+id/finish_button"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/finish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:onClick="finishMission"
            android:text="@string/end"
            app:layout_constraintBottom_toTopOf="@+id/abort_button"
            app:layout_constraintEnd_toEndOf="parent" />


        <Button
            android:id="@+id/abort_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:onClick="stopWaypointMission"
            android:text="@string/abort"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/arm_button" />

        <Button
            android:id="@+id/point_down_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/rotate_down"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/gimbal_right_button" />
        <Button
            android:id="@+id/gimbal_right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:onClick="checkgps"
            android:text="@string/rotate_right"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/gimbal_left_button" />
        <Button
            android:id="@+id/gimbal_left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/rotate_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/rotationBar" />

        <TextView
            android:id="@+id/statusTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/status_unknown"
            android:textColor="@color/yellow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/rotationBar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/gimbal_left_button"
            app:layout_constraintEnd_toEndOf="@id/gimbal_left_button"
            app:layout_constraintBottom_toBottomOf="parent"
            android:progressDrawable="@android:color/transparent"
            android:layout_marginStart="0dp"
            android:max="90"
            android:min="-90"
            android:progress="0"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="8dp"
            android:elevation="7dp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="16dp"
            android:src="@android:drawable/button_onoff_indicator_off"
            app:layout_constraintStart_toStartOf="@id/gimbal_left_button"
            app:layout_constraintEnd_toEndOf="@id/gimbal_left_button"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>


